--- a/Course/package.json
+++ b/Course/package.json
@@ -17,6 +17,7 @@
   },
   "homepage": "https://github.com/Abhi-AD/NODE-JS#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.18.3"
   },
   "devDependencies": {
