add the Protecting Routes

--- a/Course/15-config.env
+++ b/Course/15-config.env
@@ -5,4 +5,4 @@ LOCAL_CONN_STR= mongodb://localhost:27017/nodejs
 DB_USER=dangiabhi332
 DB_PASSWORD=I3NXePNOb9M6OZrs
 SECRET_STR = 'DPH2VT-TNVB4X-9Q3TJR-4HKHJW-4YUCV5'
-LOGIN_EXPIRES = 3600
+LOGIN_EXPIRES = 3600000
